# verband

./: Makefile  compose.yaml  schema.gql
backend/: Cargo.toml  Dockerfile.dev
backend/graphql/: Cargo.toml
backend/graphql/src/: dataloader.rs  event.rs  guard.rs  lib.rs  model.rs  mutation.rs  query.rs  scalar.rs  subscription.rs
backend/graphql/src/dataloader/: helper.rs  post.rs  user.rs
backend/graphql/src/guard/: user.rs
backend/graphql/src/model/: block.rs  block_version.rs  post.rs  tag.rs  user.rs
backend/graphql/src/mutation/: block.rs  post.rs  tag.rs  user.rs
backend/graphql/src/query/: block.rs  post.rs  tag.rs  user.rs
backend/migrations/: 20240102032900_initial.down.sql  20240102032900_initial.up.sql
backend/server/: Cargo.toml
backend/server/src/: main.rs
backend/tools/: Cargo.toml
frontend/: .gitignore  codegen.ts  next.config.js  package-lock.json  package.json
frontend/src/: globals.css  prism-vs.scss  prism-vsc-dark-plus.scss
frontend/src/components/: block-editor.tsx  block.tsx  post-creator.tsx  topbar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx
frontend/src/components/ui-expansions/: multiple-selector.tsx
frontend/src/contexts/: data-context.tsx  user-context.tsx
frontend/src/graphql/: urql.ts
frontend/src/graphql/mutations/: UserLogin.gql  UserRegister.gql
frontend/src/graphql/queries/: UserMe.gql
frontend/src/hooks/: useBlock.ts
frontend/src/layouts/: default.tsx
frontend/src/lib/: dataloader.ts  dummy-blocks.ts  markdown.ts  react.ts
frontend/src/pages/: _app.tsx  index.tsx  search.tsx
frontend/src/pages/auth/: login.tsx  logout.tsx  register.tsx
nginx/: dev.conf
