[workspace]
members = ["server", "graphql", "tools"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
async-graphql = "6.0"
async-graphql-axum = "6.0"
async-stream = "0.3"
async-trait = "0.1"
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
futures = "0.3"
itertools = "0.12"
meilisearch-sdk = "0.24"
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "chrono"] }
sqlx-macros = "0.7"
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tower-sessions = { version = "0.6", features = ["postgres-store"] }
