[package]
name = "verband-graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-graphql = { workspace = true, features = [
    "chrono",
    "dataloader",
    "secrecy",
] }
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
futures.workspace = true
itertools.workspace = true
meilisearch-sdk.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres"] }
sqlx-macros.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tower-sessions.workspace = true
