[package]
name = "verband-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-graphql-axum.workspace = true
async-graphql.workspace = true
axum.workspace = true
tokio.workspace = true
tower-sessions.workspace = true
tower.workspace = true

verband-graphql.path = "../graphql"
